--- a/WPF_Inventory/frm_inventory.xaml
+++ b/WPF_Inventory/frm_inventory.xaml
@@ -5,41 +5,41 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPF_Inventory"
         mc:Ignorable="d"
-        Title="Inventory" Height="700" Width="1000" WindowStartupLocation="CenterScreen"
+        Title="Inventory" Height="768" Width="1366" WindowStartupLocation="CenterScreen"
         >
     <Grid>
 
         <TextBlock x:Name="timerTextBlock" Width="20" Height="20" VerticalAlignment="Top" HorizontalAlignment="Left" />
 
-        <StackPanel Orientation="Vertical" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10,30,0,0">
+        <StackPanel Orientation="Vertical" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10,0,0,0" >
 
             
             <TextBox Name="txtid" HorizontalAlignment="left" TabIndex="0" Text="ID" Visibility="Hidden"
-               Margin="10,0,0,0" VerticalAlignment="Top" Height="20" Width="20"></TextBox>
+               Margin="10,0,0,0" VerticalAlignment="Top" FontSize="5"></TextBox>
 
             <Label Content="Status:" Margin="10,0,0,0"></Label>
             <Label Content="----------"  Name="lblmatch" FontWeight="Bold" FontSize="9" FontStyle="Italic" Margin="50,-23,0,0" Foreground="SeaGreen"></Label>
             
-            <Label Content="Name of Staff"  FontWeight="Bold"  Margin="10,0,0,0" ></Label>
-          
+            <Label Content="Name of Staff"  FontWeight="Bold" FontSize="9" Margin="10,-10,0,0" ></Label>
 
-            <TextBox Name="txtnameofstaff" TabIndex="0" Margin="10,0,0,0" Height="20" Width="200" TextChanged="txtnameofstaff_TextChanged" MouseLeave="txtnameofstaff_MouseLeave" SelectionChanged="txtnameofstaff_SelectionChanged"></TextBox>
-            <ListBox x:Name="listBoxSuggestions" SelectionChanged="listBoxSuggestions_SelectionChanged"  Margin="10,0,0,0" Height="20" Width="200" />
-           
-            <Label Content="Section" HorizontalAlignment="Left" FontWeight="Bold"  Margin="10,0,0,0"></Label>
-            <TextBox Name="txtsection" TabIndex="1" Margin="10,0,0,0" Height="20" Width="200"></TextBox>
 
-            <Label Content="Division" FontWeight="Bold" Margin="10,0,0,0 "></Label>
-            <TextBox Name="txtdivision" TabIndex="2" Margin="10,0,0,0" Height="20" Width="200"></TextBox>
-           
-            <Label Content="Number of pieces" FontWeight="Bold" Margin="10,0,0,0" ></Label>
-            <TextBox Name="txtpiece" TabIndex="3" Margin="10,0,0,0"  Height="20" Width="200"></TextBox>
+            <TextBox Name="txtnameofstaff" FontSize="11" TabIndex="0" Margin="10,0,0,0"  TextChanged="txtnameofstaff_TextChanged" MouseLeave="txtnameofstaff_MouseLeave" SelectionChanged="txtnameofstaff_SelectionChanged"></TextBox>
+            <ListBox x:Name="listBoxSuggestions" FontSize="9" SelectionChanged="listBoxSuggestions_SelectionChanged"  Margin="10,0,0,0" Height="20" Width="200" />
 
-            <Label Content="Type of ICT Equipment" FontWeight="Bold" Margin="10,0,0,0" ></Label>
-            <TextBox Name="txttypeofict" TabIndex="4" Margin="10,0,0,0"  Height="20" Width="200"></TextBox>
+            <Label Content="Section" FontSize="9" HorizontalAlignment="Left" FontWeight="Bold"  Margin="10,0,0,0"></Label>
+            <TextBox Name="txtsection" TabIndex="1"  FontSize="11" Margin="10,0,0,0" ></TextBox>
 
-            <Label Content="Hardware type" FontWeight="Bold" Margin="10,0,0,0"></Label>
-            <ComboBox Name="cmbtype" TabIndex="5" Margin="10,0,0,0" VerticalAlignment="Top" Height="25" Width="200">
+            <Label Content="Division" FontSize="9" FontWeight="Bold" Margin="10,0,0,0 "></Label>
+            <TextBox Name="txtdivision" FontSize="11" TabIndex="2" Margin="10,0,0,0" ></TextBox>
+
+            <Label Content="Number of pieces" FontSize="9" FontWeight="Bold" Margin="10,0,0,0" ></Label>
+            <TextBox Name="txtpiece" TabIndex="3"  FontSize="11" Margin="10,0,0,0"  ></TextBox>
+
+            <Label Content="Type of ICT Equipment" FontSize="9" FontWeight="Bold" Margin="10,0,0,0" ></Label>
+            <TextBox Name="txttypeofict" TabIndex="4"  FontSize="11" Margin="10,0,0,0" ></TextBox>
+
+            <Label Content="Hardware type" FontWeight="Bold" FontSize="9"  Margin="10,0,0,0"></Label>
+            <ComboBox Name="cmbtype" TabIndex="5" Margin="10,0,0,0"  FontSize="9" VerticalAlignment="Top">
                 <ComboBoxItem>Desktop</ComboBoxItem>
                 <ComboBoxItem>Laptop</ComboBoxItem>
                 <ComboBoxItem>Printer</ComboBoxItem>
@@ -47,18 +47,39 @@
                 <ComboBoxItem>Photo Copier</ComboBoxItem>
             </ComboBox>
 
-            <Label Content="Year Acquired" FontWeight="Bold" Margin="10,0,0,0" ></Label>
-            <DatePicker Name="datetimepicker" TabIndex="6" Margin="10,0,0,0" Height="25" Width="200" />
+
+            <Label Content="Serial Number" FontSize="9" FontWeight="Bold" Margin="10,0,0,0" ></Label>
+            <TextBox Name="txtserialnumber" TabIndex="6"  FontSize="11" Margin="10,0,0,0"  ></TextBox>
+
+            <Label Content="Previous Owner" FontSize="9" FontWeight="Bold" Margin="10,0,0,0" ></Label>
+            <TextBox Name="txtprevowner" TabIndex="7"  FontSize="11" Margin="10,0,0,0"  ></TextBox>
+
+
+            <Label Content="Model" FontSize="9" FontWeight="Bold" Margin="10,0,0,0" ></Label>
+            <TextBox Name="txtmodel" TabIndex="8"  FontSize="11" Margin="10,0,0,0" ></TextBox>
+
+            <Label Content="Brand" FontSize="9" FontWeight="Bold" Margin="10,0,0,0" ></Label>
+            <TextBox Name="txtbrand" TabIndex="9"  FontSize="11" Margin="10,0,0,0" ></TextBox>
+
+            <Label Content="Property Number" FontSize="9" FontWeight="Bold" Margin="10,0,0,0" ></Label>
+            <TextBox Name="txtproperty" TabIndex="10"  FontSize="11" Margin="10,0,0,0" ></TextBox>
+
+            <Label Content="Cost" FontSize="9" FontWeight="Bold" Margin="10,0,0,0" ></Label>
+            <TextBox Name="txtcost" TabIndex="11"  FontSize="11" Margin="10,0,0,0" ></TextBox>
+            
+
+            <Label Content="Year Acquired" FontWeight="Bold" FontSize="9" Margin="10,0,0,0" ></Label>
+            <DatePicker Name="datetimepicker" TabIndex="12" Margin="10,0,0,0"  />
 
             
             
         </StackPanel>
 
-        <StackPanel Orientation="Vertical" VerticalAlignment="Stretch" HorizontalAlignment="Left" Margin="20,430,0,0">
-            <Button x:Name="btnclear" Content="Clear" TabIndex="10" Cursor="Hand" Margin="0,10,0,0" HorizontalAlignment="Left" Height="30" Width="120" Click="btnclear_Click" Background="DarkCyan" Foreground="White" BorderThickness="0"></Button>
+        <StackPanel Orientation="Vertical" VerticalAlignment="Stretch" HorizontalAlignment="Left" Margin="20,560,0,0">
+            <Button x:Name="btnclear" Content="Clear" TabIndex="17" Cursor="Hand" Margin="0,10,0,0" HorizontalAlignment="Left" Height="20" Width="120" Click="btnclear_Click" Background="DarkCyan" Foreground="White" BorderThickness="0"></Button>
 
-            <Button x:Name="btnadd" IsDefault="True" FontSize="15" FontFamily="CenturyGothic" HorizontalAlignment="Left" TabIndex="7" Cursor="Hand" Background="#14CA53" 
-               Foreground="White" Margin="0,10,0,0"  Height="35" Width="200" Click="btnadd_Click" BorderThickness="0">
+            <Button x:Name="btnadd" IsDefault="True" FontSize="15" FontFamily="CenturyGothic" HorizontalAlignment="Left" TabIndex="14" Cursor="Hand" Background="#14CA53" 
+               Foreground="White" Margin="0,10,0,0"  Height="25" Width="200" Click="btnadd_Click" BorderThickness="0">
 
                 <Button.Resources>
                     <Style TargetType="Border">
@@ -72,8 +93,8 @@
             </Button>
 
 
-            <Button x:Name="btnupdate" HorizontalAlignment="Left" TabIndex="8" Cursor="Hand" FontSize="15" FontFamily="CenturyGothic" Background="#F3B605" 
-             Foreground="White"  Margin="0,10,0,0"  Height="35" Width="200" Click="btnupdate_Click"  BorderThickness="0" >
+            <Button x:Name="btnupdate" HorizontalAlignment="Left" TabIndex="15" Cursor="Hand" FontSize="15" FontFamily="CenturyGothic" Background="#F3B605" 
+             Foreground="White"  Margin="0,10,0,0"  Height="25" Width="200" Click="btnupdate_Click"  BorderThickness="0" >
 
                 <Button.Resources>
                     <Style TargetType="Border">
@@ -88,8 +109,8 @@
             </Button>
 
 
-            <Button x:Name="btndelete"   HorizontalAlignment="Left" TabIndex="9" Cursor="Hand" FontSize="15" FontFamily="CenturyGothic" Background="#F33705" 
-             Foreground="White" Margin="0,10,0,0" VerticalAlignment="Top" Height="35" Width="200" Click="btndelete_Click"   BorderThickness="0">
+            <Button x:Name="btndelete"   HorizontalAlignment="Left" TabIndex="16" Cursor="Hand" FontSize="15" FontFamily="CenturyGothic" Background="#F33705" 
+             Foreground="White" Margin="0,10,0,0" VerticalAlignment="Top" Height="25" Width="200" Click="btndelete_Click"   BorderThickness="0">
 
                 <Button.Resources>
 
